fixed some styling for fonts and text spacing

--- a/Pages/about/about.css
+++ b/Pages/about/about.css
@@ -2,6 +2,7 @@ html, body {
   margin:0; /* to make the header fit the screen without whitespace */
   padding:0;
   background: url("../../img/background.png") no-repeat center center fixed #5287b6;
+  color: #3d3d3d;
 }
 
 .wrapper{
@@ -98,6 +99,7 @@ html, body {
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 10px;
+  color: black;
 }
 
 .contact {
@@ -117,9 +119,9 @@ html, body {
   background: #fff;
   box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
   backdrop-filter: blur(6px);
-  text-align: center;
+  text-align: left;
   font-weight: bolder;
-  color: black;
+  color: #3d3d3d;
   padding: 5%;
 }
 
@@ -161,12 +163,35 @@ html, body {
 
 .profile_container {
   margin-top: 20px;
-  background: #fff;
+  background: #ffffff;
+  border: 1px solid rgb(169, 169, 169);
   text-align: center;
+  border-radius: 17px;
   font-weight: bolder;
-  color: black;
+  color: #3d3d3d;
   padding: 50px;
   margin-right: 30px;
 }
 
+img {
+  border-radius: 17px;
+}
+
 .smooth { transition: transform .5s ease-out; }
+
+.welcome {
+  text-align:left;
+  color:white;
+}
+
+.app_highlight {
+  font-style: italic;
+}
+
+.title {
+  font-size: 30px;
+}
+
+.highlight {
+  color: #1CB0F6;
+}
